--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -16,5 +16,5 @@ jobs:
       uses: SamKirkland/FTP-Deploy-Action@v4.3.5
       with:
         server: onlineauctions.click
-        username: ${{ secrets.ftp_username }}
-        password: ${{ secrets.ftp_password }}
+        username: ${{ secrets.ftp2_username }}
+        password: ${{ secrets.ftp2_password }}
